# webr

./: LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: pypi-publish.yml
src/webr/: __init__.py
src/webr/html/: __init__.py  document.py  parser.py
src/webr/url/: __init__.py  url.py
tests/: test_parser.py
tests/helpers/: htmlbuilder.py
tests/htmltools/: builder.py
